prevents charts to overflow from their grid fixes dependencies

--- a/packages/view-vizbuilder/src/style.scss
+++ b/packages/view-vizbuilder/src/style.scss
@@ -41,6 +41,8 @@
 
     svg.d3plus-viz {
       display: block !important;
+      max-width: 100%;
+      max-height: 100%;
     }
   }
 }
